--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "zadanie1",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "express": "^4.17.3",
     "ip": "^1.1.5",
