--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "zadanie1",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "develop": "npx nodemon server.js"
   },
   "dependencies": {
+    "country-locale-map": "^1.8.0",
     "express": "^4.17.3",
+    "fast-geoip": "^1.1.68",
     "ip": "^1.1.5",
+    "ipaddr.js": "^2.0.1",
+    "nodemon": "^2.0.15",
+    "public-ip": "^5.0.0",
     "satelize": "^0.2.0"
   }
 }
